--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "owl.carousel": "^2.3.4",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "showdown": "^2.1.0"
   }
 }
