--- a/picplate-frontend/package.json
+++ b/picplate-frontend/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "framer-motion": "^12.9.2",
     "gsap": "^3.12.7",
     "jwt-decode": "^4.0.0",
     "owl.carousel": "^2.3.4",
@@ -19,6 +20,7 @@
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.5.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "showdown": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
