--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@google-cloud/vertexai": "^1.10.0",
     "@google-cloud/vision": "^5.1.0",
     "@google/generative-ai": "^0.2.1",
+    "@google/genai": "^0.10.0",
     "axios": "^1.8.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
