--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@google-cloud/logging": "^11.2.0",
     "@google-cloud/vertexai": "^1.10.0",
     "@google-cloud/vision": "^5.1.0",
     "@google/genai": "^0.10.0",
